--- a/css/ui.jqgrid.css
+++ b/css/ui.jqgrid.css
@@ -63,14 +63,14 @@
 }
 
 .ui-jqgrid .ui-jqgrid-htable th {
-	height: 22px;
+	height: 30px;
 	padding: 0 2px 0 2px;
 }
 
 .ui-jqgrid .ui-jqgrid-htable th div {
 	overflow: hidden;
 	position: relative;
-	height: 17px;
+	height: 20px;
 }
 
 .ui-th-column,.ui-jqgrid .ui-jqgrid-htable th.ui-th-column {
@@ -179,6 +179,7 @@ tr.ui-search-toolbar select {
 	border-right-style: solid;
 }
 
+<!-- cell data align -->
 .ui-jqgrid tr.ui-row-rtl td {
 	text-align: right;
 	border-left-width: 1px;
